fixing api docs
